4.8.0 Release Notes
-------------------

 o Added HEALPIX, rHEALPIX and Icosahedral Snyder Equal Area projections.

 o nad2bin now produces "CTable2" format grid shift files by default which
   are platform independent.  

 o Add pj_get_spheroid_defn() accessor.

 o Added an alternate version of pj_init() that takes a projCtx (execution
   context) structure to address multithreading issues with error management
   and to provide a support for application hookable error reporting and
   logging.

 o Upgrade to EPSG 7.9.  Some changes in ideal datum selection.

 o JNI bindings reworked, org.proj4.Projections deprecated in favor of 
   org.proj4.PJ. 

 o Added preliminary vertical datum support.

 o Fix various multithreading issues, particular in datum grid handling code.

 o Added support for the +axis= option for alternate axis orientations as
   part of a coordinate system (used for TM South Orientated support).

   

4.7.0 Release Notes
-------------------

 o Added in memory caching of init file search results for substantial
   acceleration in some application environments (like MapServer). 

 o Regenerated nad/epsg init file with EPSG 7.1 database, including new
   support for Google Mercator (EPSG:3857).

 o Various thread safety improvements, including preliminary support for
   a mutex lock around some operations, like grid loading.


4.6.1 Release Notes
-------------------

 o Upgraded to EPSG 6.17 version for nad/epsg.  Also corrected the precision
   problem introduced in the last version.

 o Added logic for tmerc projection to fail rather than return crazy results
   if more than 90 degrees away from the central meridian (#5).  This change
   may only be temporary till a more comprehensive solution is found.

 o Fixed handling of extra text in cs2cs.  

 o Renamed INSTALL to INSTALL.TXT.
 
 o The eqc projection has been generalized to include a latitude of origin.

 o Added the glabsgm (Gauss Laborde / Sphere Geometric Mean) projection,